k8s/default-http-backend.yaml
apiVersion: v1
kind: Service
metadata: 
  name: default-http-backend
spec:
  selector:
    app: default-response-app
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 8081
    
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-response-app-deployment
  labels:
    app: default-response-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-response-app
  template:
    metadata:
      labels:
        app: default-response-app
    spec:
      containers:
      - name: default-response-app
        image: tf-default-response-app:k8s
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
